--- a/src/view/index.html
+++ b/src/view/index.html
@@ -1,8 +1,21 @@
 <!DOCTYPE html>
 <html>
-<%= require('html-loader!./layout/html-head.html') %>
+<head>
+	<%= require('html-loader!./layout/head-common.html') %>
+
+	<title>电商平台</title>
+</head>
+
 <body>
-	hello webpackffds
-	fds
+	<%= require('html-loader!./layout/nav.html') %>
+	<%= require('html-loader!./layout/header.html') %>
+
+	<div class="page-wrap w">
+		<%= require('html-loader!./layout/nav-side.html') %>
+		<div class="content with-nav">
+			test
+		</div>
+	</div>
+	<%= require('html-loader!./layout/footer.html') %>
 </body>
 </html>
